<resources>
    <string name="app_name">Exchange</string>
    <string name="amount">Amount</string>
    <string name="fromCurrency">From Currency</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="pound">Pound</string>
    <string name="toCurrency">To currency</string>
    <string name="exchange">Exchange</string>
    <string name="value">0</string>
    <string name="main_exchange">%1$s - %2$s</string>
</resources>