<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:text="0"
        android:gravity="right"
        android:imeOptions="actionDone"
        />

    <TextView
        android:id="@+id/lblFromCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromCurrency"
        />

    <RadioGroup
        android:id="@+id/rdgFromCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fromDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:enabled="false"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <RadioButton
            android:id="@+id/fromEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:checked="true"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <RadioButton
            android:id="@+id/fromPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <TextView
            android:id="@+id/fromIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_euro"
            android:layout_marginLeft="@dimen/radioMarginLeft"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lblToCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toCurrency" />

    <RadioGroup
        android:id="@+id/rdgToCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/toDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:checked="true"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <RadioButton
            android:id="@+id/toEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:enabled="false"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <RadioButton
            android:id="@+id/toPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            android:layout_marginRight="@dimen/radioMarginRight"/>
        <TextView
            android:id="@+id/toIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_dollar"
            android:layout_marginLeft="@dimen/radioMarginLeft"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"/>
</LinearLayout>